Adds daily update function [update.py], which may contain a bunch of bugs

--- a/tests/tushare_test.ipynb
+++ b/tests/tushare_test.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-08-08T01:18:30.672774Z",
-     "start_time": "2025-08-08T01:18:29.678420Z"
+     "end_time": "2025-08-11T06:35:30.262799Z",
+     "start_time": "2025-08-11T06:35:28.914775Z"
     }
    },
    "source": [
@@ -1458,6 +1458,389 @@
     }
    ],
    "execution_count": 36
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-11T06:41:51.605152Z",
+     "start_time": "2025-08-11T06:41:50.960248Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "pro.adj_factor(ts_code='000005.SZ', trade_date='')",
+   "id": "1755a213e940fe20",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "        ts_code trade_date  adj_factor\n",
+       "0     000005.SZ   20240425       9.268\n",
+       "1     000005.SZ   20240424       9.268\n",
+       "2     000005.SZ   20240423       9.268\n",
+       "3     000005.SZ   20240422       9.268\n",
+       "4     000005.SZ   20240419       9.268\n",
+       "...         ...        ...         ...\n",
+       "5995  000005.SZ   19990729       4.433\n",
+       "5996  000005.SZ   19990728       4.433\n",
+       "5997  000005.SZ   19990727       4.433\n",
+       "5998  000005.SZ   19990726       4.433\n",
+       "5999  000005.SZ   19990723       4.433\n",
+       "\n",
+       "[6000 rows x 3 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ts_code</th>\n",
+       "      <th>trade_date</th>\n",
+       "      <th>adj_factor</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>000005.SZ</td>\n",
+       "      <td>20240425</td>\n",
+       "      <td>9.268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>000005.SZ</td>\n",
+       "      <td>20240424</td>\n",
+       "      <td>9.268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>000005.SZ</td>\n",
+       "      <td>20240423</td>\n",
+       "      <td>9.268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>000005.SZ</td>\n",
+       "      <td>20240422</td>\n",
+       "      <td>9.268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>000005.SZ</td>\n",
+       "      <td>20240419</td>\n",
+       "      <td>9.268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5995</th>\n",
+       "      <td>000005.SZ</td>\n",
+       "      <td>19990729</td>\n",
+       "      <td>4.433</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5996</th>\n",
+       "      <td>000005.SZ</td>\n",
+       "      <td>19990728</td>\n",
+       "      <td>4.433</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5997</th>\n",
+       "      <td>000005.SZ</td>\n",
+       "      <td>19990727</td>\n",
+       "      <td>4.433</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5998</th>\n",
+       "      <td>000005.SZ</td>\n",
+       "      <td>19990726</td>\n",
+       "      <td>4.433</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5999</th>\n",
+       "      <td>000005.SZ</td>\n",
+       "      <td>19990723</td>\n",
+       "      <td>4.433</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6000 rows × 3 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-11T06:40:03.097096Z",
+     "start_time": "2025-08-11T06:40:01.718881Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "ts.pro_bar(ts_code='000001.SZ',adjfactor=True)",
+   "id": "3d582a62a431902",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "        ts_code trade_date   open   high    low  close  pre_close  change  \\\n",
+       "0     000001.SZ   20250808  12.48  12.53  12.39  12.40      12.47   -0.07   \n",
+       "1     000001.SZ   20250807  12.44  12.53  12.39  12.47      12.46    0.01   \n",
+       "2     000001.SZ   20250806  12.47  12.52  12.40  12.46      12.47   -0.01   \n",
+       "3     000001.SZ   20250805  12.30  12.50  12.28  12.47      12.30    0.17   \n",
+       "4     000001.SZ   20250804  12.24  12.38  12.21  12.30      12.28    0.02   \n",
+       "...         ...        ...    ...    ...    ...    ...        ...     ...   \n",
+       "5995  000001.SZ   20000323  18.50  18.72  18.26  18.61      18.48    0.13   \n",
+       "5996  000001.SZ   20000322  18.26  18.65  18.15  18.48      18.26    0.22   \n",
+       "5997  000001.SZ   20000321  18.22  18.39  18.00  18.26      18.22    0.04   \n",
+       "5998  000001.SZ   20000320  17.90  18.37  17.68  18.22      18.17    0.05   \n",
+       "5999  000001.SZ   20000317  17.80  18.32  17.78  18.17        NaN     NaN   \n",
+       "\n",
+       "      pct_chg         vol        amount  \n",
+       "0       -0.56   829795.91  1.032587e+06  \n",
+       "1        0.08   722053.05  9.007600e+05  \n",
+       "2       -0.08   690447.65  8.596847e+05  \n",
+       "3        1.38  1132078.20  1.405152e+06  \n",
+       "4        0.16  1032689.69  1.271376e+06  \n",
+       "...       ...         ...           ...  \n",
+       "5995     0.70    82301.00  1.523178e+05  \n",
+       "5996     1.20    73829.00  1.355052e+05  \n",
+       "5997     0.22    69673.00  1.264777e+05  \n",
+       "5998     0.28    75644.00  1.370681e+05  \n",
+       "5999      NaN    88670.00  1.601297e+05  \n",
+       "\n",
+       "[6000 rows x 11 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ts_code</th>\n",
+       "      <th>trade_date</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>pre_close</th>\n",
+       "      <th>change</th>\n",
+       "      <th>pct_chg</th>\n",
+       "      <th>vol</th>\n",
+       "      <th>amount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20250808</td>\n",
+       "      <td>12.48</td>\n",
+       "      <td>12.53</td>\n",
+       "      <td>12.39</td>\n",
+       "      <td>12.40</td>\n",
+       "      <td>12.47</td>\n",
+       "      <td>-0.07</td>\n",
+       "      <td>-0.56</td>\n",
+       "      <td>829795.91</td>\n",
+       "      <td>1.032587e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20250807</td>\n",
+       "      <td>12.44</td>\n",
+       "      <td>12.53</td>\n",
+       "      <td>12.39</td>\n",
+       "      <td>12.47</td>\n",
+       "      <td>12.46</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>722053.05</td>\n",
+       "      <td>9.007600e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20250806</td>\n",
+       "      <td>12.47</td>\n",
+       "      <td>12.52</td>\n",
+       "      <td>12.40</td>\n",
+       "      <td>12.46</td>\n",
+       "      <td>12.47</td>\n",
+       "      <td>-0.01</td>\n",
+       "      <td>-0.08</td>\n",
+       "      <td>690447.65</td>\n",
+       "      <td>8.596847e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20250805</td>\n",
+       "      <td>12.30</td>\n",
+       "      <td>12.50</td>\n",
+       "      <td>12.28</td>\n",
+       "      <td>12.47</td>\n",
+       "      <td>12.30</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>1.38</td>\n",
+       "      <td>1132078.20</td>\n",
+       "      <td>1.405152e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20250804</td>\n",
+       "      <td>12.24</td>\n",
+       "      <td>12.38</td>\n",
+       "      <td>12.21</td>\n",
+       "      <td>12.30</td>\n",
+       "      <td>12.28</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>1032689.69</td>\n",
+       "      <td>1.271376e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5995</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20000323</td>\n",
+       "      <td>18.50</td>\n",
+       "      <td>18.72</td>\n",
+       "      <td>18.26</td>\n",
+       "      <td>18.61</td>\n",
+       "      <td>18.48</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>82301.00</td>\n",
+       "      <td>1.523178e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5996</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20000322</td>\n",
+       "      <td>18.26</td>\n",
+       "      <td>18.65</td>\n",
+       "      <td>18.15</td>\n",
+       "      <td>18.48</td>\n",
+       "      <td>18.26</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>73829.00</td>\n",
+       "      <td>1.355052e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5997</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20000321</td>\n",
+       "      <td>18.22</td>\n",
+       "      <td>18.39</td>\n",
+       "      <td>18.00</td>\n",
+       "      <td>18.26</td>\n",
+       "      <td>18.22</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>69673.00</td>\n",
+       "      <td>1.264777e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5998</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20000320</td>\n",
+       "      <td>17.90</td>\n",
+       "      <td>18.37</td>\n",
+       "      <td>17.68</td>\n",
+       "      <td>18.22</td>\n",
+       "      <td>18.17</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>75644.00</td>\n",
+       "      <td>1.370681e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5999</th>\n",
+       "      <td>000001.SZ</td>\n",
+       "      <td>20000317</td>\n",
+       "      <td>17.80</td>\n",
+       "      <td>18.32</td>\n",
+       "      <td>17.78</td>\n",
+       "      <td>18.17</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>88670.00</td>\n",
+       "      <td>1.601297e+05</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6000 rows × 11 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "3429436fbce61b16"
   }
  ],
  "metadata": {
