--- a/tests/python_test.ipynb
+++ b/tests/python_test.ipynb
@@ -6,13 +6,17 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-08-07T07:41:55.917238Z",
-     "start_time": "2025-08-07T07:41:55.914130Z"
+     "end_time": "2025-08-11T02:03:54.834748Z",
+     "start_time": "2025-08-11T02:03:54.830307Z"
     }
    },
-   "source": "a = [1,2,3,4,5,6,7,8,9]",
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "a = [1,2,3,4,5,6,7,8,9]"
+   ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 10
   },
   {
    "metadata": {
@@ -39,6 +43,93 @@
     }
    ],
    "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-11T01:35:03.537821Z",
+     "start_time": "2025-08-11T01:35:03.524332Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df=pd.DataFrame()",
+   "id": "35981c6e8604c529",
+   "outputs": [],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-11T01:35:05.573847Z",
+     "start_time": "2025-08-11T01:35:05.569347Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "type(df)",
+   "id": "dd6e4adacaee6d2d",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-11T01:36:00.193447Z",
+     "start_time": "2025-08-11T01:36:00.188184Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df.empty",
+   "id": "c3e653999ff69618",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-11T02:03:56.218235Z",
+     "start_time": "2025-08-11T02:03:56.081908Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df = pd.read_excel('因子组合.xlsx')\n",
+   "id": "39d690f5587674aa",
+   "outputs": [],
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-11T02:04:07.207423Z",
+     "start_time": "2025-08-11T02:04:07.188936Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df.to_csv('factors.csv')",
+   "id": "d4f48f47b2d03b82",
+   "outputs": [],
+   "execution_count": 12
   }
  ],
  "metadata": {
