--- a/tests/sqlalchemy_test.ipynb
+++ b/tests/sqlalchemy_test.ipynb
@@ -371,6 +371,53 @@
     }
    ],
    "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-11T08:41:12.553100Z",
+     "start_time": "2025-08-11T08:41:08.795166Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import tushare as ts\n",
+    "import pandas as pd\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "from utils.utils import *\n",
+    "engine=easyConnect()\n",
+    "df = pd.read_sql('select adj_factor from  {table_name}'.format(table_name=\n",
+    "                                                           'stock_daily_electronic_information'), engine)"
+   ],
+   "id": "fb08d0d2e2840d8d",
+   "outputs": [],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-11T08:41:54.052286Z",
+     "start_time": "2025-08-11T08:41:54.046880Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df.isnull().sum()",
+   "id": "a895c1e51401ad8b",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "adj_factor    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
   }
  ],
  "metadata": {
