supports momentum factors [momentum.py] & auto update factors [update_factor.py]

--- a/tests/tushare_test.ipynb
+++ b/tests/tushare_test.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-08-11T06:35:30.262799Z",
-     "start_time": "2025-08-11T06:35:28.914775Z"
+     "end_time": "2025-08-12T03:26:52.021557Z",
+     "start_time": "2025-08-12T03:26:50.230980Z"
     }
    },
    "source": [
@@ -1835,12 +1835,382 @@
    "execution_count": 5
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-12T06:34:00.930342Z",
+     "start_time": "2025-08-12T06:34:00.262492Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from utils.utils import *\n",
+    "pro = easyPro()\n",
+    "ts.pro_bar(ts_code='801770.SI')"
+   ],
+   "id": "3429436fbce61b16",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [ts_code, trade_date, open, high, low, close, pre_close, change, pct_chg, vol, amount]\n",
+       "Index: []"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ts_code</th>\n",
+       "      <th>trade_date</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>pre_close</th>\n",
+       "      <th>change</th>\n",
+       "      <th>pct_chg</th>\n",
+       "      <th>vol</th>\n",
+       "      <th>amount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-12T07:20:43.501675Z",
+     "start_time": "2025-08-12T07:20:43.110400Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "pro.sw_daily(ts_code='801080.SI')",
+   "id": "cbac141585341f40",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "        ts_code trade_date name     open      low     high    close  change  \\\n",
+       "0     801080.SI   20250811   电子  4951.52  4951.51  5049.13  5035.26   87.03   \n",
+       "1     801080.SI   20250808   电子  4980.92  4946.59  4980.92  4948.23  -57.79   \n",
+       "2     801080.SI   20250807   电子  5005.89  4973.24  5037.81  5006.02   22.27   \n",
+       "3     801080.SI   20250806   电子  4925.69  4917.96  4984.28  4983.75   45.25   \n",
+       "4     801080.SI   20250805   电子  4927.86  4906.31  4940.11  4938.50   28.33   \n",
+       "...         ...        ...  ...      ...      ...      ...      ...     ...   \n",
+       "3160  801080.SI   20120807   电子  1223.83  1222.57  1234.78  1233.85    9.57   \n",
+       "3161  801080.SI   20120806   电子  1191.14  1188.81  1225.06  1224.28   29.51   \n",
+       "3162  801080.SI   20120803   电子  1161.96  1160.99  1194.77  1194.77   35.09   \n",
+       "3163  801080.SI   20120802   电子  1154.72  1153.28  1166.99  1159.68    2.83   \n",
+       "3164  801080.SI   20120801   电子  1133.04  1132.40  1163.11  1156.86   21.65   \n",
+       "\n",
+       "      pct_change        vol      amount     pe    pb     float_mv  \\\n",
+       "0           1.76  1006513.0  24418473.0  57.98  3.97  487071114.0   \n",
+       "1          -1.15   898794.0  22053225.0  57.00  3.67  478652531.0   \n",
+       "2           0.45  1114251.0  28072677.0  57.67  3.95  484133329.0   \n",
+       "3           0.92   910278.0  22017253.0  57.36  3.93  481685271.0   \n",
+       "4           0.58   830885.0  19794070.0  56.85  3.89  476997837.0   \n",
+       "...          ...        ...         ...    ...   ...          ...   \n",
+       "3160        0.78    50210.0    561182.0  36.06  2.58   20445399.0   \n",
+       "3161        2.47    52412.0    614116.0  35.78  2.56   20286969.0   \n",
+       "3162        3.03    43630.0    520498.0  34.92  2.49   19797966.0   \n",
+       "3163        0.24    36724.0    422992.0  33.90  2.41   19216391.0   \n",
+       "3164        1.91    33358.0    345041.0  33.67  2.41   19089111.0   \n",
+       "\n",
+       "          total_mv  \n",
+       "0     9.723873e+08  \n",
+       "1     9.555061e+08  \n",
+       "2     9.633497e+08  \n",
+       "3     9.574662e+08  \n",
+       "4     9.511923e+08  \n",
+       "...            ...  \n",
+       "3160  4.782972e+07  \n",
+       "3161  4.747780e+07  \n",
+       "3162  4.633971e+07  \n",
+       "3163  4.498419e+07  \n",
+       "3164  4.452551e+07  \n",
+       "\n",
+       "[3165 rows x 15 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ts_code</th>\n",
+       "      <th>trade_date</th>\n",
+       "      <th>name</th>\n",
+       "      <th>open</th>\n",
+       "      <th>low</th>\n",
+       "      <th>high</th>\n",
+       "      <th>close</th>\n",
+       "      <th>change</th>\n",
+       "      <th>pct_change</th>\n",
+       "      <th>vol</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>pe</th>\n",
+       "      <th>pb</th>\n",
+       "      <th>float_mv</th>\n",
+       "      <th>total_mv</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>801080.SI</td>\n",
+       "      <td>20250811</td>\n",
+       "      <td>电子</td>\n",
+       "      <td>4951.52</td>\n",
+       "      <td>4951.51</td>\n",
+       "      <td>5049.13</td>\n",
+       "      <td>5035.26</td>\n",
+       "      <td>87.03</td>\n",
+       "      <td>1.76</td>\n",
+       "      <td>1006513.0</td>\n",
+       "      <td>24418473.0</td>\n",
+       "      <td>57.98</td>\n",
+       "      <td>3.97</td>\n",
+       "      <td>487071114.0</td>\n",
+       "      <td>9.723873e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>801080.SI</td>\n",
+       "      <td>20250808</td>\n",
+       "      <td>电子</td>\n",
+       "      <td>4980.92</td>\n",
+       "      <td>4946.59</td>\n",
+       "      <td>4980.92</td>\n",
+       "      <td>4948.23</td>\n",
+       "      <td>-57.79</td>\n",
+       "      <td>-1.15</td>\n",
+       "      <td>898794.0</td>\n",
+       "      <td>22053225.0</td>\n",
+       "      <td>57.00</td>\n",
+       "      <td>3.67</td>\n",
+       "      <td>478652531.0</td>\n",
+       "      <td>9.555061e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>801080.SI</td>\n",
+       "      <td>20250807</td>\n",
+       "      <td>电子</td>\n",
+       "      <td>5005.89</td>\n",
+       "      <td>4973.24</td>\n",
+       "      <td>5037.81</td>\n",
+       "      <td>5006.02</td>\n",
+       "      <td>22.27</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>1114251.0</td>\n",
+       "      <td>28072677.0</td>\n",
+       "      <td>57.67</td>\n",
+       "      <td>3.95</td>\n",
+       "      <td>484133329.0</td>\n",
+       "      <td>9.633497e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>801080.SI</td>\n",
+       "      <td>20250806</td>\n",
+       "      <td>电子</td>\n",
+       "      <td>4925.69</td>\n",
+       "      <td>4917.96</td>\n",
+       "      <td>4984.28</td>\n",
+       "      <td>4983.75</td>\n",
+       "      <td>45.25</td>\n",
+       "      <td>0.92</td>\n",
+       "      <td>910278.0</td>\n",
+       "      <td>22017253.0</td>\n",
+       "      <td>57.36</td>\n",
+       "      <td>3.93</td>\n",
+       "      <td>481685271.0</td>\n",
+       "      <td>9.574662e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>801080.SI</td>\n",
+       "      <td>20250805</td>\n",
+       "      <td>电子</td>\n",
+       "      <td>4927.86</td>\n",
+       "      <td>4906.31</td>\n",
+       "      <td>4940.11</td>\n",
+       "      <td>4938.50</td>\n",
+       "      <td>28.33</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>830885.0</td>\n",
+       "      <td>19794070.0</td>\n",
+       "      <td>56.85</td>\n",
+       "      <td>3.89</td>\n",
+       "      <td>476997837.0</td>\n",
+       "      <td>9.511923e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3160</th>\n",
+       "      <td>801080.SI</td>\n",
+       "      <td>20120807</td>\n",
+       "      <td>电子</td>\n",
+       "      <td>1223.83</td>\n",
+       "      <td>1222.57</td>\n",
+       "      <td>1234.78</td>\n",
+       "      <td>1233.85</td>\n",
+       "      <td>9.57</td>\n",
+       "      <td>0.78</td>\n",
+       "      <td>50210.0</td>\n",
+       "      <td>561182.0</td>\n",
+       "      <td>36.06</td>\n",
+       "      <td>2.58</td>\n",
+       "      <td>20445399.0</td>\n",
+       "      <td>4.782972e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3161</th>\n",
+       "      <td>801080.SI</td>\n",
+       "      <td>20120806</td>\n",
+       "      <td>电子</td>\n",
+       "      <td>1191.14</td>\n",
+       "      <td>1188.81</td>\n",
+       "      <td>1225.06</td>\n",
+       "      <td>1224.28</td>\n",
+       "      <td>29.51</td>\n",
+       "      <td>2.47</td>\n",
+       "      <td>52412.0</td>\n",
+       "      <td>614116.0</td>\n",
+       "      <td>35.78</td>\n",
+       "      <td>2.56</td>\n",
+       "      <td>20286969.0</td>\n",
+       "      <td>4.747780e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3162</th>\n",
+       "      <td>801080.SI</td>\n",
+       "      <td>20120803</td>\n",
+       "      <td>电子</td>\n",
+       "      <td>1161.96</td>\n",
+       "      <td>1160.99</td>\n",
+       "      <td>1194.77</td>\n",
+       "      <td>1194.77</td>\n",
+       "      <td>35.09</td>\n",
+       "      <td>3.03</td>\n",
+       "      <td>43630.0</td>\n",
+       "      <td>520498.0</td>\n",
+       "      <td>34.92</td>\n",
+       "      <td>2.49</td>\n",
+       "      <td>19797966.0</td>\n",
+       "      <td>4.633971e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3163</th>\n",
+       "      <td>801080.SI</td>\n",
+       "      <td>20120802</td>\n",
+       "      <td>电子</td>\n",
+       "      <td>1154.72</td>\n",
+       "      <td>1153.28</td>\n",
+       "      <td>1166.99</td>\n",
+       "      <td>1159.68</td>\n",
+       "      <td>2.83</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>36724.0</td>\n",
+       "      <td>422992.0</td>\n",
+       "      <td>33.90</td>\n",
+       "      <td>2.41</td>\n",
+       "      <td>19216391.0</td>\n",
+       "      <td>4.498419e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3164</th>\n",
+       "      <td>801080.SI</td>\n",
+       "      <td>20120801</td>\n",
+       "      <td>电子</td>\n",
+       "      <td>1133.04</td>\n",
+       "      <td>1132.40</td>\n",
+       "      <td>1163.11</td>\n",
+       "      <td>1156.86</td>\n",
+       "      <td>21.65</td>\n",
+       "      <td>1.91</td>\n",
+       "      <td>33358.0</td>\n",
+       "      <td>345041.0</td>\n",
+       "      <td>33.67</td>\n",
+       "      <td>2.41</td>\n",
+       "      <td>19089111.0</td>\n",
+       "      <td>4.452551e+07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3165 rows × 15 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 7
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "3429436fbce61b16"
+   "id": "3cdbd83d8e596049"
   }
  ],
  "metadata": {
